// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatList /> renders correctly 1`] = `
<a
  className="MuiButtonBase-root-76 MuiListItem-root-65 MuiListItem-default-68 MuiListItem-gutters-72 MuiListItem-button-73"
  href="/chat/1"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  Avatar
  <div
    className="MuiListItemText-root-79"
  >
    <span
      className="MuiTypography-root-85 MuiTypography-subheading-92 MuiListItemText-primary-82"
    >
      test
    </span>
    <p
      className="MuiTypography-root-85 MuiTypography-body1-94 MuiTypography-colorTextSecondary-118 MuiListItemText-secondary-83"
    >
      2 days ago
    </p>
  </div>
  <span
    className="MuiTouchRipple-root-120"
  />
</a>
`;

exports[`<ChatList /> renders correctly active 1`] = `
<a
  className="MuiButtonBase-root-76 MuiListItem-root-65 MuiListItem-default-68 MuiListItem-gutters-72 MuiListItem-button-73 ChatListItem-activeItem-64"
  href="/chat/1"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  Avatar
  <div
    className="MuiListItemText-root-79"
  >
    <span
      className="MuiTypography-root-85 MuiTypography-subheading-92 MuiListItemText-primary-82"
    >
      test
    </span>
    <p
      className="MuiTypography-root-85 MuiTypography-body1-94 MuiTypography-colorTextSecondary-118 MuiListItemText-secondary-83"
    >
      2 days ago
    </p>
  </div>
  <span
    className="MuiTouchRipple-root-120"
  />
</a>
`;

exports[`<ChatList /> renders correctly disabled 1`] = `
<a
  className="MuiButtonBase-root-76 MuiButtonBase-disabled-77 MuiListItem-root-65 MuiListItem-default-68 MuiListItem-gutters-72 MuiListItem-disabled-70 MuiListItem-button-73"
  href="/chat/1"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="-1"
>
  Avatar
  <div
    className="MuiListItemText-root-79"
  >
    <span
      className="MuiTypography-root-85 MuiTypography-subheading-92 MuiListItemText-primary-82"
    >
      test
    </span>
    <p
      className="MuiTypography-root-85 MuiTypography-body1-94 MuiTypography-colorTextSecondary-118 MuiListItemText-secondary-83"
    >
      2 days ago
    </p>
  </div>
</a>
`;
